--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cleanup": "npx rimraf ./dist",
     "dev": "npm run webpack:dev && npm run webpack:server",
     "webpack:server": "npx webpack-dev-server --config ./webpack.dev.js",
-    "webpack:dev": "npm run cleanup && npx webpack --config ./webpack.dev.js",
+    "webpack:dev": "yarn run stylelint:fix && yarn run lint:fix && npm run cleanup && npx webpack --config ./webpack.dev.js",
     "build": "yarn run cleanup && npx webpack --config ./webpack.prod.js",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
@@ -20,7 +20,6 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "core-js": "3",
-    "prettier": "^2.0.5",
     "regenerator-runtime": "^0.13.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
@@ -39,6 +38,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "sass": "^1.26.9",
     "sass-loader": "^9.0.1",
