--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "yarn run cleanup && npx webpack --config ./webpack.prod.js",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "stylelint": "stylelint --config .stylelintrc.yml './src/**/*.scss'",
-    "stylelint:fix": "stylelint --config .stylelintrc.yml './src/**/*.scss' --fix"
+    "stylelint": "stylelint --config .stylelintrc './src/**/*.scss'",
+    "stylelint:fix": "stylelint --config .stylelintrc './src/**/*.scss' --fix"
   },
   "dependencies": {
     "@babel/core": "^7.10.4",
@@ -44,8 +44,11 @@
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
     "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "7.0.0",
     "stylelint-config-recess-order": "^2.0.4",
+    "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0",
     "stylelint-webpack-plugin": "^2.1.0",
     "terser-webpack-plugin": "^3.0.6",
