--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@zeit/next-css": "^1.0.1",
     "babel-loader": "^8.1.0",
     "core-js": "3",
     "regenerator-runtime": "^0.13.5",
+    "swiper": "^6.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
@@ -52,6 +54,7 @@
     "stylelint-scss": "^3.18.0",
     "stylelint-webpack-plugin": "^2.1.0",
     "terser-webpack-plugin": "^3.0.6",
+    "url-loader": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   }
